--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,17 +5,19 @@ notebook
 numpy
 matplotlib
 seaborn
-pyhton-box==6.0.2
+python-box==6.0.2
 pyYAML
 tqdm
 ensure==1.0.2
 joblib
-types-pyYAML
+types-PyYAML
 scipy
 mlflow==1.26.1
-pytest==7.1.3 ## Development requirements
+-e .
+
+## Dev requirements
+pytest==7.1.3
 tox==3.25.1
 black==22.8.0
 flake8==5.0.4
 mypy==0.971
--e .
