--- a/tox.ini
+++ b/tox.ini
@@ -2,18 +2,19 @@
 envlist = python3.8
 
 [gh-actions]
-pyhton = 3.8 : python3.8
+python = 
+    3.8: python3.8
 
-[testenv] 
-deps = -rrequirements_dev.yext
-commands=
-    ## Stop the build if there are python synatx errors or undefind errors
-    flake8 src --count --select = E9,F63, F7,F82 --show-source --statistics
-    ## exit_zero treats all errors as warnings. The GitHub editor is 127 chars wide
+[testenv]
+deps = -rrequirements_dev.txt
+commands = 
+    # stop the build if there are Python syntax errors or undefined names
+    flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
+    # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     flake8 src --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    ## type linting
+    # type linting
     mypy src/
-    ## pytests unit
+    # pytest unit
     pytest -v tests/unit
-    ## pytest intigration
+    # pytest integration
     pytest -v tests/integration
