--- a/setup.cfg
+++ b/setup.cfg
@@ -1,40 +1,26 @@
 [metadata]
-name = my_package
-version = attr: my_package.VERSION
-author = Velugu Srinu Babu
-author_email = srinub
-description = My package description
-long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
-keywords = one, two
-license = BSD-3-Clause
-classifiers =
-    Framework :: Django
-    Programming Language :: Python :: 3
+license = MIT
+license_file = LICENSE
+classifier =
+    Programming Language :: Python :: 3.8
+    Operating System :: OS Independent
 
 [options]
-zip_safe = False
-include_package_data = True
-packages = find:
-python_requires = >=3.7
 install_requires =
-    requests
-    importlib-metadata; python_version<"3.8"
-
-[options.package_data]
-* = *.txt, *.rst
-hello = *.msg
-
-[options.entry_points]
-console_scripts =
-    executable-name = my_package.module:function
+    ensure==1.0.2
+python_requires = >=3.7    
 
 [options.extras_require]
-pdf = ReportLab>=1.2; RXP
-rest = docutils>=0.3; pack ==1.1, ==1.3
+testing =
+    pytest>=7.1.3
+    mypy>=0.971
+    flake8>=5.0.4
+    tox>=3.25.1
+    black>=22.8.0
 
-[options.packages.find]
-exclude =
-    examples*
-    tools*
-    docs*
-    my_package.tests*
+[options.package_data]
+deepClassifier = py.typed
+  
+[flake8]
+max-line-length = 160
+exclude = __init__.py
